--- a/HospitalAdmin/Views/Home/Index.cshtml
+++ b/HospitalAdmin/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Hospital Admin</h1>
+    <p>Use the table below to view, add, update or delete hospitals</p>
+    <partial name="~/Views/Shared/_HospitalTable.cshtml" />
 </div>
