--- a/HospitalAdmin/wwwroot/css/site.css
+++ b/HospitalAdmin/wwwroot/css/site.css
@@ -69,3 +69,28 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.app-btn {
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    padding: 5px 15px;
+    background-color: #365da2;
+    transition: all 200ms;
+    color: #ffffff;
+}
+
+.app-btn.ghost-btn {
+    background-color: transparent;
+    border: solid 2px #000000;
+    color: #000000;
+    padding: 3px 15px;
+}
+
+.app-btn:hover {
+    background-color: #5f7396;
+}
+
+.app-btn.ghost-btn:hover {
+    color: #ffffff;
+}
